# rusenti

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  vite.config.ts
api/: docker-compose.yml
api/src/: config.rs
core/: Cargo.toml
src/: config.rs  lib.rs  main.rs
src/api/: error.rs  mod.rs
src/api/controllers/: user_controller.rs
src/http/: mod.rs
src/http/controllers/: user_controller.rs
src/http/models/: user.rs
src/lib/: index.ts
src/lib/components/: Button.svelte  MenuPane.svelte  button.svelte  form.svelte  index.ts
src/lib/components/canvas/: ResizablePane.svelte  Workspace.svelte
src/lib/components/canvas/Canvas/: WASMHydrator.svelte
src/lib/components/canvas/Header/: CenterBar.svelte  Header.svelte  RightButtons.svelte
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/canvas/: +page.svelte
src/routes/projects/: +page.svelte
src/routes/projects/MenuPane/: ProjectGroups.svelte  ProjectMenuPane.svelte
src/routes/projects/ProjectChoiceView/: NewWithSizeBar.svelte  SizeOptions.svelte
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: .gitignore  LICENSE  pnpm-lock.yaml
web/.svelte-kit/: ambient.d.ts
web/.svelte-kit/types/: route_meta_data.json
web/src/lib/components/: NormalButton.svelte  index.ts
web/src/routes/: +page.svelte
web/src/routes/canvas/: +page.svelte  WASMHydrator.svelte  Workspace.svelte
web/src/routes/login/: +page.svelte
web/src/routes/signup/: +page.svelte
web/wasm/: Cargo.toml  modulize.js
web/wasm/src/: layer.rs  lib.rs  palette.rs  viewport.rs
(+11 files in other folders)
