[package]
name = "skrudriver"
version = "0.1.0"
edition = "2021"
 
[dependencies]
#core (runtime, http, database)
axum = "0.7.4"
axum-macros = "0.4.1"
tokio = { version = "1.35.1", features = ["full"]}
tower-http = { version = "0.5.1", features = [
  "catch-panic",
  "compression-full",
  "sensitive-headers",
  "timeout",
  "trace",
]}

#data manipulation and types
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "uuid"]}
serde = { version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
uuid = { version = "1.7.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"]}

#utilities
anyhow = "1.0.79"
dotenvy = "0.15.7"
thiserror = "1.0.56"
log = "0.4.20"
clap = { version = "4.4.18", features = ["derive", "env"] }
