[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.91"
web-sys = { version = "0.3.68", features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "Document",
  "Window",
] }
